# freeq

./: .gitignore  AUDIT-REPORT.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TESTING-SUMMARY.md  TODOS.md  demo-agent.sh  demo-phase1-interactive.py  demo-phase1.py  demo-phase2-interactive.py  demo.py  irc-policy.db  irc-policy.db-shm  irc-policy.db-wal  iroh-key.secret.old.20260225234505  security-audit-2026-03-29.html
Freeq.WinUI/: CLAUDE.md  DESIGN.md  Freeq.WinUI.slnx
Freeq.WinUI/Freeq.WinUI/: App.xaml  App.xaml.cs  Freeq.WinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
Freeq.WinUI/Freeq.WinUI (Package)/: Freeq.WinUI (Package).wapproj  Package.appxmanifest
Freeq.WinUI/Freeq.WinUI.Tests/: Freeq.WinUI.Tests.csproj  IrcParserTests.cs  NickColorTests.cs  OAuthPayloadTests.cs
data/: test-policy.db  test.db
deploy/: README.md  deploy.sh  freeq-server.service.template  nginx.conf.template  setup.sh
deploy/irc/: Dockerfile  deploy.sh
deploy/staging/: Dockerfile  deploy.sh
docs/: AGENT-NATIVE-IMPLEMENTATION.md  AV-ARCHITECTURE.md  AV-IROH-BRIDGE-PLAN.md  AV-NATIVE-BROWSER-PLAN.md  AV-NEXT-STEPS.md  Features.md  KNOWN-LIMITATIONS.md  MACOS-GAPS.md  SECURITY-AUDIT-2026-03-29.md  WEB-APP-PLAN.md  agent-assist-test-session-mlx.md  agent-assist-test-session.md  agents.md  oauth-scope-edge-cases.md  oauth-scope-smoke.md  typescript-sdk.md
docs/agent-native/: PHASE-1-KNOWN-ACTORS.md  PHASE-2-GOVERNABLE-AGENTS.md  PHASE-3-COORDINATED-WORK.md  PHASE-4-INTEROP-AND-SPAWNING.md  PHASE-5-ECONOMIC-CONTROLS.md  README.md
docs/plans/: ios-catchup.md
docs/skills/: hotspots.md  well-known-agent.md
examples/full-validation-bot/: .gitignore  README.md  index.ts  package.json  sample-validation.jsonl
examples/karma-bot/: .gitignore  README.md  index.ts  package.json  sample-validation.jsonl
examples/logger-bot/: .gitignore  README.md  index.ts  package.json
freeq-app/: Cargo.toml  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
freeq-app/e2e/: adversarial.spec.ts  audio-flow.spec.ts  audio-publish.spec.ts  av-edge-cases.spec.ts  av-sessions.spec.ts  channel-behavior.spec.ts  reactions.spec.ts
freeq-app/src/: App.tsx  av-sessions.test.ts  corner-cases.test.ts  index.css  mega-test.test.ts  store.bugs.test.ts  store.test.ts  store.ts  vite-env.d.ts
freeq-auth-broker/: Cargo.toml  build.rs  deploy.sh  git_commit.txt
freeq-auth-broker/.miren/: app.toml
freeq-auth-broker/src/: main.rs
freeq-av-client/: Cargo.toml
freeq-av-client/examples/: audio_e2e.rs  bridge_e2e.rs  bridge_live_audio.rs  browser_to_native_e2e.rs  demo3_demo4_e2e.rs  sfu_only_test.rs
freeq-av-client/src/: main.rs  sfu.rs
freeq-bot-id/: Cargo.toml
freeq-bot-id/src/: demo_bot.rs  main.rs
freeq-bots/: Cargo.toml
freeq-bots/src/: context.rs  lib.rs  llm.rs  memory.rs  output.rs
freeq-bots/src/auditor/: mod.rs
freeq-bots/src/factory/: orchestrator.rs
freeq-ios/: build-rust.sh  project.yml
freeq-ios/freeq/: ContentView.swift  Info.plist  freeqApp.swift
freeq-ios/freeq.xcodeproj/: project.pbxproj
freeq-ios/freeqLiveActivity/: CallLiveActivity.swift  Info.plist
freeq-ios/freeqShared/: CallActivityAttributes.swift  WatchPayloads.swift
freeq-ios/freeqTests/: BufferRoutingTests.swift
freeq-ios/freeqWatch/: BufferDetailView.swift  BufferListView.swift  Info.plist  WatchSession.swift  freeqWatchApp.swift
freeq-macos/: Package.swift  build.sh  project.yml
freeq-macos/FreeqSDK.xcframework/: Info.plist
freeq-macos/freeq-macos/: App.swift  Theme.swift
freeq-macos/freeq-macos.xcodeproj/: project.pbxproj
freeq-sdk/: Cargo.toml
freeq-sdk-ffi/: Cargo.toml
freeq-sdk-ffi/src/: freeq.udl  lib.rs
freeq-sdk-js/: README.md  package-lock.json  package.json  tsconfig.json
freeq-sdk-js/src/: client.guest-fallback.test.ts  client.stale-state.test.ts  client.ts  did-key.test.ts  did-key.ts  e2ee.ts  events.ts  index.ts  parser.ts  profiles.ts  signing.ts  transport.ts  types.ts
freeq-sdk/examples/: agent_test.rs  demo_phase2.rs  demo_phase3.rs  demo_phase4.rs  pi_agent.rs  spawn_test.rs
freeq-sdk/src/: auth.rs  client.rs  crypto.rs  did.rs  irc.rs  lib.rs  media.rs  oauth.rs  p2p.rs  ratchet.rs  ssrf.rs  streaming.rs  x3dh.rs
freeq-sdk/tests/: adversarial.rs  e2ee_key_exchange.rs  sdk_edge_cases.rs
freeq-server/: Cargo.toml  build.rs
freeq-server/src/: av.rs  av_artifacts.rs  av_bridge.rs  av_media.rs  av_sfu.rs  av_sfu_page.html  config.rs  db.rs  irc.rs  iroh.rs  lib.rs  manifest.rs  s2s.rs  sasl.rs  secrets.rs  server.rs  web.rs
freeq-server/src/agent_assist/: api.rs  caller.rs  mod.rs  recorder.rs  tools.rs  types.rs
freeq-server/src/agent_assist/llm/: mock.rs  mod.rs  openai.rs  prompts.rs  router.rs
freeq-server/src/connection/: cap.rs  channel.rs  helpers.rs  messaging.rs  mod.rs  queries.rs  registration.rs
freeq-server/src/policy/: api.rs  engine.rs  store.rs  types.rs
freeq-server/src/verifiers/: mod.rs
freeq-server/static/av/: call.html  index.html  publish.html
freeq-server/static/av/assets/: publish-0_tfMLVg.js  time-Do1uKez-.js  watch-CQEo0ml-.js
freeq-server/tests/: agent_assist.rs  agent_assist_authenticated.rs  agent_assist_bot_tools.rs  agent_assist_security.rs  agent_native.rs  av_bridge_test.rs  broker_auth.rs  bug_hunt.rs  chathistory_adversarial.rs  dm_history.rs  edge_cases.rs  edit_delete_adversarial.rs  encryption.rs  integration.rs  legacy_irc.rs  multi_device.rs  nasty_edge_cases.rs  oauth_scope.rs  oauth_ssrf.rs  protocol_ctf.rs  protocol_hardening.rs  s2s_acceptance.rs  s2s_adversarial.rs  sasl_adversarial.rs  sdk_client.rs  upload_eviction.rs
freeq-site/: .git_commit  app.py  deploy.sh  requirements.txt
freeq-site/.well-known/: atproto-did
freeq-site/docs/: AGENT-CONTEXT.md  AV-BRIDGE-STATUS.md  AV-SESSIONS-PLAN.md  MACOS-APP-PLAN.md  S2S-AUTH-PLAN.md  agent-assistance.md  architecture-decisions.md  self-hosting.md  server-did.md  step2-architecture-map.md  windows-cli-setup-and-run.md  (+2 more)
scripts/: hotspots.sh  run-local-tests.sh  start-test-servers.sh  test-agent-assist.sh
(+161 files in other folders)
