[workspace]
resolver = "2"
members = [
    "freeq-server",
    "freeq-sdk",
    "freeq-sdk-ffi",
    "freeq-tui",
    "freeq-bots",
    "freeq-auth-broker",
    "freeq-windows-core",
    "freeq-bot-id",
]
exclude = [
    "freeq-app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
k256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
signature = "2"
clap = { version = "4", features = ["derive", "env"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
webpki-roots = "1"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
percent-encoding = "2"
open = "5"
dirs = "5"
rusqlite = { version = "0.38", features = ["bundled"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
iroh = "0.96"
iroh-quinn = "0.16"
automerge = "0.5"

[workspace.lints.clippy]
too_many_arguments = "allow"
large_enum_variant = "allow"
await_holding_lock = "allow"
