[package]
name = "freeq-auth-broker"
version = "0.1.1"
edition = "2024"
license = "MIT"

description = "Auth broker for freeq (pluggable identity providers)"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
percent-encoding = "2"
rusqlite = { version = "0.38", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
p256 = { version = "0.13", features = ["ecdsa"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2"
aes-gcm = "0.10"
hkdf = "0.12"


