[package]
name = "freeq-sdk-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "freeq_sdk_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
freeq-sdk = { path = "../freeq-sdk", default-features = false, features = ["ring", "rustls-tls", "iroh-transport"] }
uniffi = { version = "0.29", features = ["cli"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
once_cell = "1"
chrono = "0.4"
tracing = { workspace = true }
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
serde_json = "1"
aes-gcm = "0.10"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[lints]
workspace = true
