[package]
name = "freeq-sdk-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "freeq_sdk_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
freeq-sdk = { path = "../freeq-sdk", default-features = false, features = ["ring", "rustls-tls", "iroh-transport", "websocket"] }
uniffi = { version = "0.29", features = ["cli"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
once_cell = "1"
chrono = "0.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
serde_json = "1"
aes-gcm = "0.10"

# AV (voice/video via MoQ SFU)
moq-native = { git = "https://github.com/Frando/moq", branch = "deps/iroh-main", default-features = false, features = ["noq", "websocket", "aws-lc-rs"], optional = true }
moq-lite = { git = "https://github.com/Frando/moq", branch = "deps/iroh-main", optional = true }
iroh-live = { git = "https://github.com/n0-computer/iroh-live", default-features = false, features = ["opus"], optional = true }
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false, optional = true }
url = { version = "2", optional = true }

[features]
default = []
av = ["moq-native", "moq-lite", "iroh-live", "rustls", "url"]

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[lints]
workspace = true
