[package]
name = "freeq-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IRC server with AT Protocol SASL authentication"

[lib]
name = "freeq_server"
path = "src/lib.rs"

[[bin]]
name = "freeq-server"
path = "src/main.rs"

[dependencies]
aes-gcm = { workspace = true }
freeq-sdk = { path = "../freeq-sdk" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
iroh = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
hex = "0.4"
url = "2"
urlencoding = "2"
regex = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
percent-encoding = { workspace = true }
iroh-quinn = { workspace = true }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
automerge = { workspace = true }
toml = "0.8"

[dev-dependencies]
freeq-sdk = { path = "../freeq-sdk" }
rcgen = "0.13"
tempfile = "3"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"

[lints]
workspace = true
